--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
